--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=divice-width, initial-scale=1.0">
-        <link rel="stylesheet" href="form.css">
+        <link rel="stylesheet" href="styles.css">
         <title>Html Form</title>
     </head>
 
