--- a/about.html
+++ b/about.html
@@ -1,3 +1,14 @@
-<p class="container">
-    companies information...
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="about.css">
+    <title>About page</title>
+</head>
+<body>
+    <p class="container">
+        companies information...
+    </p>
+</body>
+</html>
